--- a/trunk/ShootingGameAlgorithmLibrary/testSGAL/testSGAL.vcproj
+++ b/trunk/ShootingGameAlgorithmLibrary/testSGAL/testSGAL.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="../include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -119,7 +119,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories="../include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -196,6 +196,18 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\BenchMemory.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\BenchTicks.hpp"
+				>
+			</File>
+			<File
+				RelativePath=".\comnhdr.h"
+				>
+			</File>
+			<File
 				RelativePath=".\ConvStr.h"
 				>
 			</File>
@@ -256,6 +268,30 @@
 				</File>
 				<File
 					RelativePath=".\DX9\WaveSound.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Timer"
+				>
+				<File
+					RelativePath=".\Timer\rdtscTimer.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Timer\stdTimer.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Timer\Timer.hpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Timer\unixTimer.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Timer\winTimer.h"
 					>
 				</File>
 			</Filter>
